# rotalabs-eval

./: CITATION.cff  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: concepts.md  getting-started.md  index.md
docs/api/: agents.md  cache.md  core.md  inference.md  metrics.md  orchestrator.md  statistics.md  tracking.md  utils.md
docs/tutorials/: agent-evaluation.md  basic-evaluation.md  custom-metrics.md  statistical-comparison.md
src/rotalabs_eval/: __init__.py
src/rotalabs_eval/agents/: __init__.py  debate.py  tool_use.py  trajectory.py
src/rotalabs_eval/cache/: __init__.py  config.py  disk.py  memory.py
src/rotalabs_eval/core/: __init__.py  config.py  dataset.py  exceptions.py  result.py  task.py  types.py
src/rotalabs_eval/inference/: __init__.py  base.py  batch.py  ollama.py  openai.py  rate_limiter.py
src/rotalabs_eval/metrics/: __init__.py  base.py  custom.py  lexical.py  llm_judge.py  rag.py  registry.py  semantic.py
src/rotalabs_eval/orchestrator/: __init__.py  async_executor.py  base.py  dask.py  local.py  ray.py  spark.py
src/rotalabs_eval/reporting/: __init__.py  html.py  results.py  viz.py
src/rotalabs_eval/statistics/: __init__.py  confidence.py  effect_size.py  power.py  significance.py
src/rotalabs_eval/tracking/: __init__.py  mlflow.py  wandb.py
src/rotalabs_eval/utils/: __init__.py  cost.py  helpers.py  tiktoken_cache.py
tests/: __init__.py  test_agents.py  test_cache.py  test_core.py  test_metrics.py  test_statistics.py  test_utils.py
