[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rotalabs-eval"
version = "1.0.0"
description = "Comprehensive LLM evaluation framework with statistical rigor"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Subhadip Mitra", email = "subhadip@rotalabs.ai" },
    { name = "Rotalabs Research", email = "research@rotalabs.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "evaluation", "llm", "metrics", "benchmarking", "statistical-testing"]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
ollama = ["ollama>=0.1.0"]
spark = ["pyspark>=3.4.0"]
dask = ["dask[distributed]>=2023.1.0"]
ray = ["ray>=2.8.0"]
embeddings = ["sentence-transformers>=2.2.0"]
tracking = ["mlflow>=2.8.0"]
wandb = ["wandb>=0.16.0"]
viz = ["matplotlib>=3.7.0", "plotly>=5.15.0", "seaborn>=0.12.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
all = ["rotalabs-eval[openai,ollama,spark,dask,ray,embeddings,tracking,wandb,viz]"]

[project.urls]
Homepage = "https://rotalabs.ai"
Repository = "https://github.com/rotalabs/rotalabs-eval"
Documentation = "https://rotalabs.github.io/rotalabs-eval"

[tool.hatch.build.targets.wheel]
packages = ["src/rotalabs_eval"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
target-version = ["py39"]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
